--- a/start-msys.bat.in
+++ b/start-msys.bat.in
@@ -1,5 +1,5 @@
 set MOZ_TOOLS=%ROOT%\moztools
-set PATH=%ROOT%\mingw\bin;%ROOT%\scripts;%ROOT%\msys\bin;%ROOT%\msys\usr\bin;%ROOT%\msys\usr\usr\local\bin;%PATH%;%ROOT%\Python26;%ROOT%\tools;%ROOT%\moztools\bin;%ROOT%\NSPR\bin
+set PATH=%ROOT%\mingw\bin;%ROOT%\scripts;%ROOT%\msys\bin;%ROOT%\msys\usr\bin;%ROOT%\msys\usr\usr\local\bin;%PATH%;%ROOT%\Python26;%ROOT%\tools;%ROOT%\moztools\bin;%ROOT%\NSPR\bin;%ROOT%\Mercurial
 set CVSROOT=:pserver:anonymous@cvs-mirror.mozilla.org:/cvsroot
 set HOME=%ROOT%
 cd msys
