--- a/start-msys.bat.in
+++ b/start-msys.bat.in
@@ -10,9 +10,12 @@ rem
 rem THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 set MOZ_TOOLS=%ROOT%/moztools
-set PATH=%ROOT%\NSIS;%ROOT%\mingw\bin;%ROOT%\scripts;%ROOT%\msys\bin;%ROOT%\msys\usr\bin;%ROOT%\msys\usr\usr\local\bin;%PATH%;%ROOT%\Python26;%ROOT%\tools;%ROOT%\moztools\bin;%ROOT%\NSPR\bin;%ROOT%\Mercurial
+set PATH=%ROOT%\NSIS;%ROOT%\mingw\bin;%ROOT%\scripts;%ROOT%\msys\bin;%ROOT%\msys\usr\bin;%ROOT%\msys\usr\usr\local\bin;%PATH%;%ROOT%\Python25;%ROOT%\tools;%ROOT%\moztools\bin;%ROOT%\NSPR\bin;%ROOT%\Mercurial
 set CVSROOT=:pserver:anonymous@cvs-mirror.mozilla.org:/cvsroot
 set HOME=%ROOT%
+set C_INCLUDE_PATH=%ROOT%\mingw\include
+set CPLUS_INCLUDE_PATH=%ROOT%\mingw\include
+set LIBRARY_PATH=%ROOT%\lib
 cd msys
 echo   Mozbuildtools Version: 0.3b1
 echo ================================
