--- a/start-cmd.in
+++ b/start-cmd.in
@@ -19,4 +19,4 @@ set LIBRARY_PATH=%ROOT%\lib
 cd msys
 echo   Mozbuildtools Version: 1.0 beta 1
 echo =====================================
-bin\bash --login -i
+cmd
