--- a/start-msys-rxvt.bat.in
+++ b/start-msys-rxvt.bat.in
@@ -19,4 +19,4 @@ set LIBRARY_PATH=%ROOT%\lib
 cd msys
 echo   Mozbuildtools Version: 1.0 RC
 echo =====================================
-msys.bat
+msys.bat --rxvt
