--- a/start-msys-rxvt.bat.in
+++ b/start-msys-rxvt.bat.in
@@ -13,9 +13,9 @@ set MOZ_TOOLS=%ROOT%/moztools
 set PATH=%ROOT%\NSIS;%ROOT%\mingw\bin;%ROOT%\scripts;%ROOT%\msys\bin;%ROOT%\msys\usr\bin;%ROOT%\msys\usr\usr\local\bin;%PATH%;%ROOT%\Python25;%ROOT%\tools;%ROOT%\moztools\bin;%ROOT%\NSPR\bin;%ROOT%\Mercurial
 set CVSROOT=:pserver:anonymous@cvs-mirror.mozilla.org:/cvsroot
 set HOME=%ROOT%
-set C_INCLUDE_PATH=%ROOT%\mingw\include
-set CPLUS_INCLUDE_PATH=%ROOT%\mingw\include
-set LIBRARY_PATH=%ROOT%\lib
+set C_INCLUDE_PATH=/mingw/include
+set CPLUS_INCLUDE_PATH=/mingw/include
+set LIBRARY_PATH=/mingw/lib
 cd msys
 echo   Mozbuildtools Version: 1.1 RC
 echo =====================================
